@@ -10,6 +10,9 @@
 		- Fixed a few problems with error reporting in the accounts section.
 		  Thanks mdean <mdean@kcnet.com>
 		- Renamed the webcal_entry.cal_create_by field to webcal_entry.cal_owner.
+		- Split out auth class, so that you can auth from anywhere and still store your accounts in sql or ldap.
+		- Added mail auth class, that will authenticate users against their email accounts
+		- Added virtual domain support. (The setup program is not properly working yet)
 
 [0.9.3] - Fixed the new user account form not returning the users firstname or last name when an
 	      error is reported.
